data/derived/comb/progs/unify/prog8703.ml.out
Characters 21-28:
  let c2 () = failwith (4,2,7);;
                       ^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type string
